# MLOps-pet-project

./: README.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/nginx/: nginx.conf
backend/src/: app.py  config.py  exceptions.py  logger.py
backend/src/router/: predict.py
backend/src/schemas/: predict.py
backend/src/static/: culture.json  edu.json
backend/src/static/amenity/: health.json
backend/src/utils/: amenity.py  feature_preparing.py  geoapify.py  models.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/public/: apartments.geojson
frontend/src/: App.tsx  index.css  reset.css
frontend/src/api/: axios.ts  env.d.ts
frontend/src/types/: mapview.ts  popup.ts
infrastructure/minio/: docker-compose.yml
infrastructure/mlflow/: Dockerfile  docker-compose.yml
infrastructure/monitoring/: dashboard.json  datasource.yml  docker-compose.yml  prometheus.yml
research/: .gitignore  Makefile  data.csv  data4.csv  dvc.yaml  pyproject.toml
research/.dvc/: .gitignore  config
research/Parsing/: .gitignore  AvitoParser.py  Handler.py  Page.py  Post.py  __init__.py  configs.json  main.py  parser.py
research/data/processed/: data.json
research/data/raw/: data.csv
research/notebooks/: prepareJSON.ipynb  test.ipynb
research/src/: .gitignore
research/src/data/: __init__.py  download_data.py
research/src/features/: add_coordinates.py  clean_raw_data.py  download_amenities.py  finalize_data.py
research/src/models/: catboost_model.py  linear_model.py  (+1 more)
(+6 files in other folders)
