[tool.poetry]
name = "mlops-backend"
version = "0.1.0"
description = ""
authors = ["Mad0Squirrel <eghorkin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.7"
catboost = "^1.2.7"
mlflow = "^2.20.0"
ipython = "^8.31.0"
aiohttp = "^3.11.11"
shapely = "^2.0.6"
prometheus-fastapi-instrumentator = "^7.0.2"
pydantic-settings = "^2.7.1"
boto3 = "^1.36.5"
python-logging-loki = "^0.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "D", "SIM", "I"]
ignore = ["F401", "D211", "D213", "B008", "D203"]

[tool.mypy]
strict = true
warn_unused_ignores = true
disable_error_code = "import-untyped"